--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "axios": "^0.14.0",
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "path": "^0.12.7",
     "react": "^15.3.2",
