--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "knex": "^0.12.1",
     "path": "^0.12.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
