--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.13.0",
     "nodemon": "^1.10.2",
-    "redux-thunk": "^2.1.0",
     "webpack": "^1.13.2"
   },
   "dependencies": {
@@ -34,6 +34,6 @@
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
-    "thunk": "0.0.1"
+    "redux-thunk": "^2.1.0"
   }
 }
