--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "knex": "^0.12.1",
+    "mysql": "^2.11.1",
     "path": "^0.12.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
